# mardan

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
.github/workflows/: docker_build.yml  main.yml
arduino/: motor-slave-i2c.c
legacy/: conector-rpi-arduino.stl  package.xml
scripts/: i2c_master.py  key.py  velocity_hub.py
src/ros/catkin_ws/: .gitignore
src/ros/catkin_ws/src/mardan/: CMakeLists.txt  package.xml
src/ros/examples/: docker-compose.yaml
src/ros/mardan/: CMakeLists.txt  package.xml  setup.py
src/ros/mardan/docker/: base.dockerfile  mardan_base_noetic.dockerfile  mardan_noetic.dockerfile
src/ros/mardan/launch/: camera.launch  camera_http_server.launch  camera_webrtc.launch  motor_control.launch
src/ros/mardan/nodes/: camera  camera_http_server  camera_publisher  camera_webrtc  motor_control
src/ros/mardan/scripts/: motor_driver
src/ros/mardan/src/mardan/hardware/: i2c.py
src/ros/mardan/src/mardan/streaming/: webrtc.py
src/ros/runtime/: mardan_runtime.dockerfile
src/server/: autostart.sh
src/server/docker/: mardan_server_noetic.dockerfile
src/server/src/: index.html  index.js
src/server/src/Joistick/: index.html
src/server/src/Joistick/assets/: index-c8226538.js
